<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_python</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thassiogomes44@gmail.com">thxssio</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>python-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>i2c-tools</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-smbus</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
